# Comodo

./: .gitmodules  CMakeLists.txt
include/internal/kernel/: ctx.h
include/internal/kernel/sequence/: channel.h  clip.h  sequence.h
include/internal/kernel/shortcuts/: shortcut.h
include/internal/kernel/utils/: init.h
include/internal/media/: media_item.h
include/internal/theme/: theme.h
include/internal/ui/: ui.h
include/internal/utils/: buttons.h
include/internal/windows/: FileDialoge.h
src/: main.cpp
src/UI/: theme.cpp
src/UI/panels/: ui.cpp
src/UI/panels/media_preview/: media.cpp  preview.cpp
src/UI/panels/navbar/: navbar.cpp
src/UI/panels/sequencer_properties/: seq_props.cpp  sequencer.cpp
src/UI/utils/: buttons.cpp
src/UI/windows/Fileview/: FileDialoge.cpp
src/kernel/: ctx.cpp
src/kernel/utils/: init.cpp
